[gd_scene load_steps=3 format=3 uid="uid://ckovx5wcivf8l"]

[ext_resource type="Script" path="res://scripts/multiplayer_test.gd" id="1_wkpkw"]
[ext_resource type="PackedScene" uid="uid://cx4rc224ppfkd" path="res://scenes/player.tscn" id="2_oxumw"]

[node name="MultiplayerTest" type="Node2D"]
script = ExtResource("1_wkpkw")
player_scene = ExtResource("2_oxumw")

[node name="Host" type="Button" parent="."]
offset_left = -324.0
offset_top = 60.0
offset_right = -280.0
offset_bottom = 91.0
text = "Host
"

[node name="Join" type="Button" parent="."]
offset_left = 169.0
offset_top = 47.0
offset_right = 207.0
offset_bottom = 78.0
text = "Join
"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/player.tscn")
spawn_path = NodePath("..")

[node name="PortInput" type="LineEdit" parent="."]
offset_left = 156.0
offset_top = 95.0
offset_right = 223.063
offset_bottom = 126.0

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
